--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 # CLion stuff
 .idea/
 cmake-build-debug/
+
+# VS Code
+.vscode/
+
+# Cmake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
