--- a/parameters/default.yaml
+++ b/parameters/default.yaml
@@ -30,7 +30,7 @@ Q_perception: 20    # Cost for reprojection error to camera optical axis (PAMPC)
 # Cost on Inputs
 R_thrust:     1     # Cost on thrust input
 R_pitchroll:  1     # Cost on pitch and roll rate
-R_yaw:        1     # Cost on yaw ratte
+R_yaw:        1     # Cost on yaw rate
 
 # Exponential scaling: W_i = W * exp(-i/N * cost_scaling).
 # cost_scaling = 0 means no scaling W_i = W. 
