--- a/parameters/default.yaml
+++ b/parameters/default.yaml
@@ -27,13 +27,16 @@ Q_attitude:     800   # Cost for attitude error
 Q_velocity:     10    # Cost for velocity error
 Q_perc_angle:   400 #800     # Cost for reprojection error to camera optical axis (PAMPC)
 Q_perc_radius:  200 #400
-Q_dist_l:       100
-Q_dist_o:       400
+Q_dist_l:       0
+Q_dist_o:       0
 
 # Cost on Inputs
 R_thrust:     1     # Cost on thrust input
 R_pitchroll:  1     # Cost on pitch and roll rate
 R_yaw:        1     # Cost on yaw rate
+
+# Cost on Slack Variable
+R_alpha: 100
 
 # Exponential scaling: W_i = W * exp(-i/N * cost_scaling).
 # cost_scaling = 0 means no scaling W_i = W. 
@@ -45,6 +48,10 @@ max_bodyrate_xy:    3.0       # ~ pi [rad/s]
 max_bodyrate_z:     2         # ~ pi*2/3 [rad/s]
 min_thrust:         2.0       # ~ 20% gravity [N]
 max_thrust:         20.0      # ~ 200% gravity [N]
+
+#Limits on Slack variable
+min_alpha:          0.0
+max_alpha:          10.0
 
 # Extrinsics for Perception Aware MPC
 p_B_C:      [ 0.0, 0.0, 0.0 ]               # camera in body center [m]
