--- a/parameters/default.yaml
+++ b/parameters/default.yaml
@@ -25,8 +25,8 @@ Q_pos_xy:       5     # Cost for horizontal positon error
 Q_pos_z:        5     # Cost for vertical position error
 Q_attitude:     800   # Cost for attitude error
 Q_velocity:     10    # Cost for velocity error
-Q_perc_angle:   400 #800     # Cost for reprojection error to camera optical axis (PAMPC)
-Q_perc_radius:  200 #400
+Q_perc_angle:   40 #800     # Cost for reprojection error to camera optical axis (PAMPC)
+Q_perc_radius:  20 #400
 Q_dist_l:       0
 Q_dist_o:       0
 
@@ -51,7 +51,7 @@ max_thrust:         20.0      # ~ 200% gravity [N]
 
 #Limits on Slack variable
 min_alpha:          0.0
-max_alpha:          10.0
+max_alpha:          1000000.0
 
 # Extrinsics for Perception Aware MPC
 p_B_C:      [ 0.0, 0.0, 0.0 ]               # camera in body center [m]
