--- a/parameters/default.yaml
+++ b/parameters/default.yaml
@@ -35,6 +35,10 @@ R_thrust:     1     # Cost on thrust input
 R_pitchroll:  1     # Cost on pitch and roll rate
 R_yaw:        1     # Cost on yaw rate
 
+# Cost on slack variables
+R_alpha: 100
+R_slack: 100
+
 # Exponential scaling: W_i = W * exp(-i/N * cost_scaling).
 # cost_scaling = 0 means no scaling W_i = W. 
 state_cost_exponential: 0.0     # Scaling for state costs
