Reference distance + tune for fix obstacle

--- a/parameters/default.yaml
+++ b/parameters/default.yaml
@@ -27,8 +27,8 @@ Q_attitude:     800   # Cost for attitude error
 Q_velocity:     10    # Cost for velocity error
 Q_perc_angle:   400 #800     # Cost for reprojection error to camera optical axis (PAMPC)
 Q_perc_radius:  200 #400
-Q_dist_l:       0
-Q_dist_o:       400
+Q_dist_l:       100
+Q_dist_o:       600
 
 # Cost on Inputs
 R_thrust:     1     # Cost on thrust input
@@ -53,9 +53,8 @@ max_thrust:         20.0      # ~ 200% gravity [N]
 max_alpha: 10
 max_slack: 1.0e+12 # numerical value of acado INFTY
 
-#Limits on Slack variable
-min_alpha:          0.0
-max_alpha:          10.0
+# Reference for body to power-line distance 
+reference_distance: 2.0
 
 # Extrinsics for Perception Aware MPC
 p_B_C:      [ 0.0, 0.0, 0.0 ]               # camera in body center [m]
