Publisher for distance

--- a/parameters/default.yaml
+++ b/parameters/default.yaml
@@ -25,8 +25,8 @@ Q_pos_xy:       5     # Cost for horizontal positon error
 Q_pos_z:        5     # Cost for vertical position error
 Q_attitude:     800   # Cost for attitude error
 Q_velocity:     10    # Cost for velocity error
-Q_perc_angle:   400 #800     # Cost for reprojection error to camera optical axis (PAMPC)
-Q_perc_radius:  200 #400
+Q_perc_angle:   400 
+Q_perc_radius:  200 
 Q_dist_l:       100
 Q_dist_o:       600
 
@@ -54,7 +54,7 @@ max_alpha: 10
 max_slack: 1.0e+12 # numerical value of acado INFTY
 
 # Reference for body to power-line distance 
-reference_distance: 2.0
+reference_distance: 1.0
 
 # Extrinsics for Perception Aware MPC
 p_B_C:      [ 0.0, 0.0, 0.0 ]               # camera in body center [m]
