--- a/parameters/default.yaml
+++ b/parameters/default.yaml
@@ -27,7 +27,7 @@ Q_attitude:     800   # Cost for attitude error
 Q_velocity:     10    # Cost for velocity error
 Q_perc_angle:   400 
 Q_perc_radius:  200 
-Q_dist_l:       100
+Q_dist_l:       50  #TODO
 Q_dist_o:       600
 
 # Cost on Inputs
@@ -35,8 +35,8 @@ R_thrust:     1     # Cost on thrust input
 R_pitchroll:  1     # Cost on pitch and roll rate
 R_yaw:        1     # Cost on yaw rate
 
-# Cost on slack variables
-R_alpha: 1
+# Cost on slack variables, TODO
+R_alpha: 0.5
 R_slack: 1000
 
 # Exponential scaling: W_i = W * exp(-i/N * cost_scaling).
