--- a/parameters/default.yaml
+++ b/parameters/default.yaml
@@ -21,14 +21,15 @@
 
 
 # Cost on states
-Q_pos_xy:       10     # Cost for horizontal positon error
+Q_pos_xy:       10    # Cost for horizontal positon error
 Q_pos_z:        5     # Cost for vertical position error
 Q_attitude:     500   # Cost for attitude error
 Q_velocity:     10    # Cost for velocity error
 Q_perc_angle:   400 
 Q_perc_radius:  200 
-Q_dist_l:       50  #TODO
+Q_dist_l:       50
 Q_dist_o:       600
+Q_diff_angle:   10    # Cost for difference in line heading and quad angle
 
 # Cost on Inputs
 R_thrust:     1     # Cost on thrust input
@@ -36,8 +37,9 @@ R_pitchroll:  1     # Cost on pitch and roll rate
 R_yaw:        1     # Cost on yaw rate
 
 # Cost on slack variables, TODO
-R_alpha: 0.5
-R_slack: 1000
+R_alpha:    0.5     # Quadratic cost for alpha
+R_alpha_lin:  15      # Linear cost for alpha
+R_slack:    1000
 
 # Exponential scaling: W_i = W * exp(-i/N * cost_scaling).
 # cost_scaling = 0 means no scaling W_i = W. 
